# scaler_hackathon_submission_apr8_2026

./: .dockerignore  .env.example  .gitattributes  .gitignore  .hfignore  Dockerfile  EXPLANATION.md  Makefile  README.md  inference.py  openenv.yaml  package-lock.json  package.json  plan.md  pyproject.toml
docs/: PIPELINE.md  README.md  _sidebar.md  api.md  architecture.md  diagram.mmd  grading.md  idea.mmd  index.html  mcp-tools.md  nav-bridge.md  quick-start.md
docs/superpowers/plans/: 2026-04-07-fundlens-migration.md
docs/superpowers/specs/: 2026-04-07-fundlens-migration-design.md
fundlens/: .dockerignore  .gitignore  Dockerfile  Example to Duplicate.xlsx  FundLens Sample Data.xlsx  README.md  Sample Data - FundLens.xlsx  client.py  data structure.xlsx  fundlens.db  generate_sample.py  openenv.yaml  pyproject.toml  requirements.txt  start.bat
fundlens/agents/: financial_analyst.py
fundlens/fundlens/admin/: __init__.py  export.py  templates.py  ui.py
fundlens/fundlens/investor/: ui.py
fundlens/fundlens/server/: __init__.py  app.py  environment.py  grader.py
fundlens/server/: app.py
fundlens/tests/: test_environment.py  test_grader.py
scripts/: demo.py
server/: __init__.py  app.py
